# GoWToolkit

./: .clang-format  .editorconfig  .gitattributes  .gitignore  BUILDING.md  CLAUDE.md  CMakeLists.txt  README.md  cliff.toml  gowrknk_internals.md  gowtoolkit.hexpat
.github/: pull_request_template.md
.github/workflows/: ci.yml  codeql.yml
docs/: ROADMAP_IMPLEMENTATION.md
docs/GoW1/Formats/: ANM.md  CAM.md  COLLISION.md  CXT.md  FLP.md  GFX.md  INST.md  LIGHT.md  MAT.md  MDL.md  MESH.md  OBJ.md  RSRCS.md  SBK.md  SCR.md  SHG.md  TWK.md  TXR.md  VAG.md  WAD.md
docs/GoW2/: Animations.md
docs/GoW2/Formats/: ANM.md  CXT.md  LIGHT.md  MDL.md  MESH.md  RSRCS.md  SBK.md  SCR.md  TWK.md  TXR.md  VAG.md
docs/GoWRknk/: Claude-Plan.MD  FORMAT_TEMPLATE.md  README.md
docs/GoWRknk/Formats/: Material.md  Mesh.md  Model.md  Shader.md  Skeleton.md  Texture.md  Wad.md
docs/formats/: FORMAT_TEMPLATE.md
docs/formats/GOW2/: CAM.md  COLLISION.md  FLP.md  GFX.md  INST.md  MAT.md  OBJ.md  SHG.md  WAD.md
docs/roadmap/: ARCHITECTURE_REVIEW_2026-05.md  ROADMAP_IMPLEMENTATION.md
docs/roadmap/state/: COMPLETED.md  CURRENT.md  DECISIONS.md
docs/state/: COMPLETED.md  CURRENT.md  DECISIONS.md
scratch/: exp  experiment.cpp  extract_gnf.py
src/: App.cpp  App.h  UIHelpers.h  main.cpp
src/cli/: CliApp.cpp  CliApp.h
src/core/: AppConfig.cpp  AppConfig.h  AssetDatabase.cpp  AssetDatabase.h  AssetVisibility.cpp  AssetVisibility.h  EventManager.h  Events.h  FontManager.cpp  FontManager.h  Logger.cpp  Logger.h  Metrics.cpp  Metrics.h  PathUtils.h  ProfileManager.cpp  ProfileManager.h  ScaleManager.cpp  ScaleManager.h  TaskManager.cpp  TaskManager.h  ThemeManager.cpp  ThemeManager.h  Threading.cpp  Threading.h  ToolkitApi.cpp  ToolkitApi.h  WadAssetName.cpp  WadTypes.h
src/core/audio/: AdpcmDecoder.cpp  AdpcmDecoder.h
src/core/domain/: BoundingBox.h  Entry.h  MediaKind.cpp  MediaKind.h  MeshVertex.h  ProfileTag.h  Wad.h  WadEntryRoleLegacy.h
src/core/formats/: GOW2AnimationFormat.h  GOW2InstanceFormat.h  GOW2ModelFormat.h  GOWRMeshDefnFormat.h
src/core/interfaces/: IGameProfile.h
src/core/loaders/: GOW2Loaders.cpp  GOW2Loaders.h  GOWRLoaders.cpp  GOWRLoaders.h  IAssetLoader.h
src/core/parsers/gow2/: AnimationParser.cpp  AnimationParser.h  InstanceParser.cpp  InstanceParser.h  MaterialParser.cpp  MaterialParser.h  MeshParser.cpp  MeshParser.h  ObjectParser.cpp  ObjectParser.h  SoundParser.cpp  SoundParser.h  TextureParser.cpp  TextureParser.h  VagParser.cpp  VagParser.h  VpkParser.cpp  VpkParser.h
src/core/parsers/gowr/: BcDecoder.h  LodPackIndex.cpp  LodPackIndex.h  MeshParser.cpp  MeshParser.h  MgParser.cpp  MgParser.h  ProtoParser.cpp  ProtoParser.h  PsnUnswizzle.h  Rdna2Detiler.h  ShaderParser.cpp  ShaderParser.h  TexPackIndex.cpp  TexPackIndex.h
src/core/parsers/shared/: AnimationData.h  MeshData.h  ObjectData.h  SceneNode.h  ScriptTargetParser.cpp  ScriptTargetParser.h  TextureData.h
src/core/platform/: SystemTheme.h  SystemTheme_linux.cpp  SystemTheme_macos.mm  SystemTheme_windows.cpp
src/core/profiles/gow2/: ProfileGOW2.cpp  ProfileGOW2.h
src/core/profiles/gow2/formats/: MDL.cpp  MDL.h
src/core/profiles/gowr/: GOWRTypes.h  GowrProfileTag.h  GowrTaxonomy.cpp  GowrTaxonomy.h  ProfileGOWR.cpp  ProfileGOWR.h  WadNodeBuilder.cpp  WadNodeBuilder.h
src/core/schema/: AssetFormat.h  AssetNode.h  AssetReader.h  DataSchema.h  DataTypes.h  NodeInstance.cpp  NodeInstance.h  StructDef.cpp  StructDef.h
src/core/types/: GameVersion.h  ITypeHandler.h  TypeId.h  TypeRegistry.cpp  TypeRegistry.h
src/core/types/handlers/: ContentHandlers.cpp  GfxHandler.cpp  InstanceHandler.cpp  MaterialHandler.cpp  MeshHandler.cpp  ModelHandler.cpp  ObjectHandler.cpp  StructuralHandlers.cpp  TextPlainHandler.cpp  TextureHandler.cpp
src/core/vfs/: IFile.h  IVirtualFileSystem.h  IsoFile.cpp  IsoFile.h  IsoFileSystem.cpp  IsoFileSystem.h  MemoryFile.h  OsFile.cpp  OsFile.h  SliceFile.h
src/fonts/: CodiconIcons.h  SFSymbols.h
src/rendering/: AnimationPlayer.cpp  AnimationPlayer.h  AxisGizmo.cpp  AxisGizmo.h  Camera.cpp  Camera.h  GpuMesh.cpp  GpuMesh.h  GridRenderer.cpp  GridRenderer.h  SceneRenderer.cpp  SceneRenderer.h  ShaderManager.cpp  ShaderManager.h
src/ui/: ActiveAnimation.cpp  ActiveAnimation.h  AnimationTimeline.cpp  AnimationTimeline.h  AppContext.h  AssetNodeRenderer.cpp  AssetNodeRenderer.h  CameraPanel.cpp  FontDebuggerWindow.cpp  FontDebuggerWindow.h  Formatting.h  IPanel.h  InfoTab.cpp  InfoTab.h  Inspector.cpp  Inspector.h  IsoBrowser.cpp  IsoBrowser.h  NativeMenuBar.cpp  NativeMenuBar.h  NativeWindow.h  PakBrowser.cpp  PakBrowser.h  PanelRegistry.h  RoleVisuals.h  SettingsWindow.cpp  SettingsWindow.h  StatusBar.cpp  StatusBar.h  TitleBar.cpp  TitleBar.h  TypeVisuals.h  ViewerRegistry.cpp  ViewerRegistry.h  WadBrowser.cpp  WadBrowser.h  WadBrowserDialog.cpp  Widgets.cpp  Widgets.h  WindowDecorator.cpp  (+1 more)
src/ui/platform/: NativeWindow_linux.cpp  NativeWindow_macos.mm  NativeWindow_windows.cpp  macos_filedialog.m  macos_menu.m
src/ui/viewers/: AnimCurveView.cpp  AnimCurveView.h  DocumentWindow.cpp  DocumentWindow.h  Dopesheet.cpp  Dopesheet.h  IDocumentContent.h  ImageViewer.cpp  ImageViewer.h  MapViewer.cpp  MapViewer.h  MaterialViewer.cpp  MaterialViewer.h  SoundPlayer.cpp  SoundPlayer.h  TextEditorViewer.cpp  TextEditorViewer.h  VideoPlayer.cpp  VideoPlayer.h  Viewport3D.cpp  Viewport3D.h  WadStatsView.cpp  WadStatsView.h
src/window/: Window.cpp  Window.h
src/window/platform/: linux.cpp  macos.mm  windows.cpp
tests/: CMakeLists.txt  golden_gow2.cpp  golden_gowr.cpp  golden_helpers.cpp  golden_helpers.h  logger_test.cpp  mediakind_test.cpp  metrics_test.cpp  test_stubs.cpp  theme_contrast_test.cpp  theme_stubs.cpp  threading_test.cpp  viewer_registry_test.cpp
tests/fixtures/: README.md
tests/fixtures/gow2/: wad_minimal.expected.json  wad_minimal.wad
tests/fixtures/gowr/: wad_minimal.expected.json  wad_minimal.wad
tools/: build_icons.py  check_layers.py  layers.yaml  make_test_fixtures.py  regenerate_goldens.sh
